# aba

./: .gitignore  .zshrc  2mysql.py  README.md  db.sqlite3  db.sqlite3.6.12.18  db.sqlite3.backup  db.sqlite3.backup.5.21.2018  db.sqlite3.backup.6.11.18  db.sqlite3.backup.sql  db.sqlite3.old  db.sqlite3.old.old  db.sqlite3.test  desktop.ini  manage.py  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  requirements.txt
abarocks/: __init__.py  pyvenv.cfg  settings.py  urls.py  utils.py  views.py  wsgi.py
abarocks/local/: __init__.py  bin  include  lib  settings.py  static  urls.py  wsgi.py
abarocks/static/: fluency.css  staticfiles.19a3d4ddba16.json  staticfiles.json
accounts/: urls.py  views.py
blog/: admin.py  models.py  urls.py  views.py
blog/context_processors/: google_analytics.py
blog/fixtures/: old_blog_data.json
blog/migrations/: 0001_initial.py  0002_auto_20170513_1554.py  0003_post_status.py  0004_post_page_views.py  0005_post_snippet_size.py  0006_post_slug.py  0007_remove_post_slug.py  0008_post_slug.py  0009_auto_20180622_1946.py  0010_post_is_pinned.py  0011_auto_20180628_1824.py  0012_auto_20180629_1945.py  0013_auto_20180629_1946.py  0014_auto_20180629_1946.py  0015_post_pic.py  0016_post_meta.py  0017_auto_20180729_1304.py  0018_auto_20180826_1646.py  0019_post_category.py  0020_category.py  0021_auto_20181115_1314.py  0022_auto_20181115_1908.py  0022_auto_20181215_1811.py  0023_auto_20181227_2255.py  0024_merge_20190101_2219.py  0025_auto_20190313_0507.py  0026_alter_post_is_pinned.py  0027_alter_category_id_alter_post_id.py
core/: admin.py  decorators.py  models.py
core/migrations/: 0001_initial.py
fluency/: admin.py  apps.py  models.py  urls.py  views.py
fluency/migrations/: 0001_initial.py  0002_auto_20181223_1614.py  0003_auto_20181227_2255.py  0004_auto_20190101_1259.py  0005_flashcard_error_reports.py  0006_auto_20190313_0507.py  0007_fluency_timed_scores_fluency_untimed_scores.py  0008_auto_20190427_0958.py  0009_auto_20190427_1019.py  0010_auto_20190427_1022.py  0011_fluencytimedscore_time_elapsed.py  0012_auto_20190427_2341.py  (+5 more)
home/: views.py
learn/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
pages/: admin.py  models.py  urls.py  views.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
quiz/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
rbtquiz/: admin.py  apps.py  models.py  urls.py  views.py
static/: staticfiles.json
templates/: about.html  base.html  content.html  desktop_sidebar.html  disqus.html  head.html  header.html  home.html  login.html  mobile_sidebar.html  patreon.html
(+191 files in other folders)
