[tool.poetry]
name = "abarocks"
version = "2.0.0"
description = "ABA Rocks is an open-source web app for aspiring behavior analysts!"
authors = [
    "Alex Raymond <harblz@gmail.com>",
    "Kyle Jensen <kyle@nullandvoid.digital>"
]
license = "n"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
django = "4.0.10"
whitenoise = "^5.3"
stripe = "^10.11"
django-taggit = "^1.3"
django-ckeditor = "6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.8"
ipython = "^8.27"
setuptools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
