[tool.poetry]
name = "abarocks"
version = "2.0.0"
description = "ABA Rocks is an open-source web app for aspiring behavior analysts!"
authors = [
    "Alex Raymond <harblz@gmail.com>",
    "Kyle Jensen <kyle@nullandvoid.digital>"
]
license = "n"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
whitenoise = "^6.7"
stripe = "^10.12"
django-taggit = "^6.0"
django-bootstrap5 = "^24.3"
django-htmx = "^1.19"
fontawesomefree = "^6.6.0"
django-ckeditor-5 = "^0.2.13"
django-render-block = "^0.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.8"
ipython = "^8.27"
setuptools = "*"
django-extensions = "^3.2"
django-debug-toolbar = "^4.4"
werkzeug = "^3.0.4"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pygraphviz = "^1.14"


[tool.poetry.group.prod]
optional = true


[tool.poetry.group.prod.dependencies]
psycopg = {extras = ["c"], version = "^3.2.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
